// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`to-have-class fails when the actual does not match the expected 1`] = `
"expected <div class=\\"root top\\"><span class=\\"child bottom\\">test</span></div>
to have class 'hotpink'"
`;

exports[`to-have-class fails when the actual does not match the expected 2`] = `
"expected <div class=\\"root top\\"><span class=\\"child bottom\\">test</span></div>
to have class 'rot'"
`;
